<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cok.android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_message">Please enter your login and password</string>
    <string name="login">Login</string>
    <string name="login_btn">Login in</string>
    <string name="password">Password</string>
    <string name="title_activity_main">Profile</string>
    <string name="title_activity_user_list">Users</string>
    <string name="title_activity_user_detail">User</string>
    <string name="title_activity_friend_list">Friends</string>
    <string name="title_activity_friend_detail">User</string>
    <string name="title_activity_personal_chat">Chat</string>
    <string name="title_activity_group_chat">Chat room</string>

    <string name="send_message">Send a message</string>



    <string name="jsonrpc">http://192.168.0.45:3000/jsonrpc</string>
    <string name="socketio">http://192.168.0.45:3000</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="jsonrpc">http://igor-ok.herokuapp.com/jsonrpc</string>-->
    <!--<string name="socketio">http://igor-ok.herokuapp.com</string>-->

</resources>
