<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="70dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/back_gradient"
    >

    <EditText
        android:id="@+id/login_field"
        android:hint="@string/login"
        style="@style/edit_text_white"
    />
    <EditText
        android:id="@+id/password_field"
        android:layout_below="@id/login_field"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/edit_text_white"
    />

    <Button
        android:id="@+id/login_btn"
        android:layout_below="@id/password_field"
        android:text="@string/login_btn"
        style="@style/btn_login"
        />
</RelativeLayout>
